# pymol-movie

./: .pre-commit-config.yaml  Dockerfile  README.md  example.yaml  pyproject.toml
.github/workflows/: black.yml  docker-image.yml  pytest.yml
sample_yamls/: test.yaml  translate.yaml
src/: __main__.py
src/pymol_movie/: __init__.py  __main__.py  main.py
src/pymol_movie/cli/: __init__.py  parsers.py
src/pymol_movie/movie/: __init__.py  loaders.py  movie.py
src/tests/: test_loaders.py  test_movie.py  test_parsers.py
src/tests/samples/yamls/: example.yaml  example_produce.yaml  example_scenes.yaml  example_setup.yaml
